# smart-house-api

./: Build_debug.bat  CMakeLists.txt  Definitions.h  Rebuild_debug.bat  StartProject.bat  cMessageManager.h  main.cpp  qtserver.cpp  qtserver.h  qtserver.sln  qtserver.ui
Mera-IM++/: Mera-IM++.vcxproj  cClient.cpp  cClient.h  cClientsList.cpp  cClientsList.h  cList.h  cMessageManager.cpp  cMessageManager.h  cServer.h  cUtils.cpp  cUtils.h  main.cpp
branches/mera-im++/: CMakeLists.txt  Mera-IM++.sln  Rebuild_debug.bat  smart_house.sln
branches/mera-im++/Mera-IM++/: Mera-IM++.vcxproj  cClient.cpp  cClient.h  cClientsList.cpp  cClientsList.h  cList.h  cMessageManager.cpp  cMessageManager.h  cUtils.h  main.cpp
branches/mera-im++/smart_house/: cFloor.h  cRoom.h  cSocket.cpp  cSocket.h  cWindow.cpp  main.h  smart_house.vcxproj
mera-im++client/: Definitions.h  Message.cpp  Message.h  QtClient.cpp  QtClient.h  Serialization.h  TcpClient.cpp  TcpClient.h  main.cpp  qtclient.pro
mera-im++qt/: Client.cpp  Client.h  ClientsList.h  List.h  Makefile.Debug  Makefile.Release  MessageManager.cpp  MessageManager.h  QServer.cpp  UISignalManager.cpp  Utils.h  cClient.cpp  cClientsList.cpp  cClientsList.h  cMessageManager.cpp  cMessageManager.h  cQServer.cpp  cQServer.h  main.cpp  qtserver.cpp  qtserver.h  qtserver.pri  qtserver.pro  qtserver.qrc  qtserver.ui  qtserver.vcxproj.filters  resource.h
qtserver-build-desktop-Qt_4_8_1_for_Desktop_-_MSVC2010__Qt_SDK_________/: Makefile.Release
smart_house/: cFloor.cpp  cFloor.h  cHouse.cpp  cHouse.h  cRoom.cpp  cRoom.h  cSocket.cpp  (+8 more)
(+2962 files in other folders)
